hphp/hack/test/typecheck/sealed/trait2.php.exp
File "trait2.php", line 5, characters 11-11:
An interface cannot be sealed (Typing[4245])
